--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "ecmarkup": "^8.1.0"
+    "@tc39/ecma262-biblio": "^2.1.2407",
+    "ecmarkup": "^15.0.0"
   }
 }
