--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,5 +17,5 @@ jobs:
       if: github.ref == 'refs/heads/main'
       uses: peaceiris/actions-gh-pages@v3
       with:
-        publish_dir: ./out
+        publish_dir: ./build
         github_token: ${{ secrets.GITHUB_TOKEN }}
