--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "Fair",
   "scripts": {
     "build": "npm run build-loose -- --strict",
-    "build-loose": "node -e 'fs.mkdirSync(\"build\", { recursive: true })' && ecmarkup --load-biblio @tc39/ecma262-biblio --verbose spec/index.html build/index.html --js-out build/ecmarkup.js --css-out build/ecmarkup.css --lint-spec",
+    "build-loose": "node -e 'fs.mkdirSync(\"build\", { recursive: true })' && ecmarkup --load-biblio @tc39/ecma262-biblio --verbose spec/index.html build/index.html --assets-dir build/ --lint-spec",
     "format": "emu-format --write 'spec/*.html'"
   },
   "homepage": "https://github.com/syg/proposal-structs",
@@ -18,6 +18,6 @@
   },
   "devDependencies": {
     "@tc39/ecma262-biblio": "^2.1.2407",
-    "ecmarkup": "^15.0.0"
+    "ecmarkup": "^19.0.0"
   }
 }
