add PR previews

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,4 +18,5 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         publish_dir: ./build
+        keep_files: true
         github_token: ${{ secrets.GITHUB_TOKEN }}
